--- a/leaderboard/package.json
+++ b/leaderboard/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "react": "^15.5.4",
-    "react-dom": "^15.5.4"
+    "react-dom": "^15.5.4",
+    "material-ui": "^0.18.1",
+    "react-material-ui-form-validator": "^0.3.2"
   },
   "devDependencies": {
     "react-scripts": "1.0.7"
